@@ -2,6 +2,12 @@
 # Copyright 2003 Stefan Knoblich <stefan.knoblich@t-online.de>
 # Distributed under the GPL v2
 
+*lmule-1.2.1 (04 May 2003)
+
+  04 May 2003; Stefan Knoblich <stefan.knoblich@t-online.de> lmule-1.2.1.ebuild
+  
+  New lmule version.
+
 *lmule-1.2.0.1 (26 Apr 2003)
 
   26 Apr 2003; Stefan Knoblich <stefan.knoblich@t-online.de> lmule-1.2.0.1.ebuild
